[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RapidProTools"
version = "0.3.9"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
dependencies=[
  "rapidpro-python",
  "python-dateutil",
  "coredatamodules @ git+https://github.com/AfricasVoices/CoreDataModules.git"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"

[tool.setuptools]
packages = ["rapid_pro_tools"]
